# promptmaster

./: .gitignore  CHANGELOG.md  README.md  ideas.md  mcp-needs-auth-cache.json  pollypm.dev.toml  pollypm.toml  pyproject.toml
.claude/: ralph-loop.local.md
.github/ISSUE_TEMPLATE/: rail-change.yml  rail-surface.yml
.tmp-pm/: pollypm.toml
docs/: README.md  account-modes.md  activity-log.md  advisor-plugin-spec.md  architecture.md  cockpit-interaction-contract.md  cockpit-qa-prompt.md  contract-audit-spec.md  conventions.md  decisions.md  deprecated-facts.md  downtime-plugin-spec.md  extensibility-architecture.md  extensible-rail-spec.md  getting-started.md  history.md  ideas-overnight.md  inbox-reply-thread-model.md  issue-tracker.md  launch-issue-audit-2026-04-27.md  launch-state-machine.md  live-integration-test-spec.md  magic-skills-catalog.md  magic-skills.md  memory-system-review.md  memory.md  morning-briefing-plugin-spec.md  planner-plugin-spec.md  plugin-authoring.md  plugin-boundaries.md  plugin-discovery-spec.md  plugin-trust.md  project-overview.md  provider-plugin-sdk.md  role-contract-spec.md  signal-routing-spec.md  stability-test-results.md  status-report.md  storage-source-of-truth.md  system-state-2026-04-11.md  (+6 more)
docs/future/: worker-onboarding-future.md
docs/internals/: inbox-reply-thread-model.md
docs/project-specs/: 01-recipe-share.md  02-github-dashboard.md  03-markdown-blog.md  04-expense-tracker.md  05-team-standup.md
docs/v1/: 01-architecture-and-domain.md  02-configuration-accounts-and-isolation.md  03-session-management-and-tmux.md  04-extensibility-and-plugin-system.md  05-provider-sdk.md  06-issue-management.md  07-project-history-import.md  08-project-state-memory-and-documentation.md  09-inbox-and-threads.md  10-heartbeat-and-supervision.md  11-agent-personas-and-prompt-system.md  12-checkpoints-and-recovery.md  13-security-observability-and-cost.md  14-testing-and-verification.md  15-migration-and-stability.md  README.md  TRACKING.md
docs/visuals/: architecture-overview.md  heartbeat-sweep-flow.md  index.html  launch-readiness.md  recovery-pipeline.md  session-health-dashboard.md
issues/: instructions.md  notes.md  progress-log.md
issues/00-not-ready/: 0001-build-status-report-generator-script.md  0001-context-task.md  0001-fix-login-redirect-on-mobile.md  0001-json-task.md  0001-lifecycle-task.md  0001-my-new-task.md  0001-task-1.md  0002-task-2.md  0002-task-b.md
issues/01-ready/: 0006-control-room-polish-and-validation.md  0009-plugin-host-and-hook-system.md  0011-pluggable-memory-backend.md  0012-pluggable-task-backend.md  0017-onboarding-wording-and-project-discovery-polish.md  0019-github-issue-execution-system.md  0023-add-readme.md
issues/02-in-progress/: 0003-token-usage-ledger.md  0019-github-issue-execution-system.md  0022-state-transition-test.md  0027-overnight-stability-test-comprehensive-test-coverage-audit.md  (+1 more)
scripts/: commit-msg  dashboard_burnin_loop.sh  install_commit_msg_hook.py  release_burnin.py  release_invariants.py  status_report.py
tests/: conftest.py  test_account_usage.py  test_account_usage_sampler.py  test_accounts.py  test_acct_manager.py  test_acct_substrate.py  test_activity_feed_cli.py  test_activity_feed_panel.py  test_activity_feed_projector.py  test_activity_feed_summaries.py  test_activity_feed_ui.py  test_advisor_assess.py  test_advisor_cli.py  test_advisor_cli_ad06.py  test_advisor_detect_changes.py  test_advisor_history_log.py  test_advisor_inbox.py  test_advisor_plugin.py  test_agent_worktree_prune.py  test_alert_toasts.py  test_approval_notifications.py  test_architect_bootstrap.py  test_architect_lifecycle.py  test_architect_stage_transitions.py  test_auth_integration.py  test_auto_claim_sweep.py  test_backup_restore.py  test_blocked_chain_sweep.py  test_cancel_clears_no_session_alerts.py  test_capacity.py  test_chat_flow.py  test_checkpoint_levels.py  test_checkpoints.py  test_claude_onboarding.py  test_cli.py  test_cli_help_examples.py  test_cli_issue.py  test_cli_notify.py  test_cli_send_force.py  test_cli_shortcuts.py  (+230 more)
(+738 files in other folders)
