[project]
name = "pollypm"
version = "1.0.0rc1"
description = "Tmux-first orchestration for interactive CLI coding agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "textual>=6.1.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
pm = "pollypm.cli:app"
pollypm = "pollypm.cli:app"

[project.entry-points."pollypm.store_backend"]
sqlite = "pollypm.store.sqlalchemy_store:SQLAlchemyStore"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pollypm = [
  "plugins_builtin/*/pollypm-plugin.toml",
  "plugins_builtin/*/profiles/*.md",
  "plugins_builtin/*/flows/*.yaml",
  "plugins_builtin/*/skills/*.md",
  "defaults/rules/*.md",
  "defaults/magic/*.md",
  "defaults/magic/*/*.md",
  "defaults/magic/*/**/*.md",
  "defaults/magic/*/**/*.html",
  "defaults/magic/*/**/*.sh",
  "defaults/magic/*/**/*.json",
  "defaults/magic/*/LICENSE",
  "defaults/docs/*.template",
  "defaults/docs/reference/*.md",
  "work/flows/*.yaml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "benchmark: performance benchmark tests (recall latency, etc.)",
]
